[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wxcadm"
version = "4.3.11"
authors = [
  { name="Trey Hilyard", email="kctrey@gmail.com" },
]
dependencies = [
    "requests==2.32.3",
    "requests-toolbelt>=1.0.0",
    "srvlookup>=2.0.0",
    "xmltodict>=0.12.0",
    "meraki>=1.30.0",
    "pyhumps==3.8.0",
    "dataclasses-json>=0.6.4"
]
description = "A Python 3 library for Webex Calling administrators"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kctrey/wxcadm"
Issues = "https://github.com/kctrey/wxcadm/issues"
Documentation = "https://wxcadm.readthedocs.io"
Changelog = "https://wxcadm.readthedocs.io/en/latest/whatsnew.html"